cmake_minimum_required(VERSION 3.22)
project (aoc)
set (CMAKE_CXX_FLAGS "-std=c++17 -Wall -pedantic")
add_executable(day1 day1.cpp aoc.h aoc.cpp)
add_executable(day2 day2.cpp aoc.h aoc.cpp)
add_executable(day3 day3.cpp aoc.h aoc.cpp)
add_executable(day4 day4.cpp aoc.h aoc.cpp)
add_executable(day5 day5.cpp aoc.h aoc.cpp)
add_executable(day6 day6.cpp aoc.h aoc.cpp)
add_executable(day7 day7.cpp aoc.h aoc.cpp)
add_executable(day8 day8.cpp aoc.h aoc.cpp)
add_executable(day9 day9.cpp aoc.h aoc.cpp)
add_executable(day10 day10.cpp aoc.h aoc.cpp)
add_executable(day11 day11.cpp aoc.h aoc.cpp)
add_executable(day12 day12.cpp aoc.h aoc.cpp)
add_executable(day13 day13.cpp aoc.h aoc.cpp)
